CompilationDbProjectManager: Do not remove -fpic from command lines

This flag is needed by the code model. The test case that had it on the
command line was invalid (clang does not allow -fPIC with win32
targets).

Fixes: QTCREATORBUG-24106
Change-Id: Ic95c82c2090ef5ee1a11d01d7e4387a5c80cda3c
Reviewed-by: Nikolai Kosjar <pinaceae.pinus@gmail.com>